--- a/app/src/main/res/layout/header_sensors.xml
+++ b/app/src/main/res/layout/header_sensors.xml
@@ -10,25 +10,11 @@
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/id_title"
+            android:layout_marginStart="30dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.100"
-            android:textSize="13.3sp"
-            android:textColor="@color/black"
-            android:fontFamily="@font/arialmt"
-    />
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="@string/name_title"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.260"
             android:textSize="13.3sp"
             android:textColor="@color/black"
             android:fontFamily="@font/arialmt"
@@ -36,12 +22,11 @@
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/map_location_title"
+            android:layout_marginStart="110dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.640"
+            android:text="@string/phone_num_title"
             android:textSize="13.3sp"
             android:textColor="@color/black"
             android:fontFamily="@font/arialmt"
@@ -49,12 +34,23 @@
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/status_title"
+            android:layout_marginStart="210dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.900"
+            android:text="@string/settings"
+            android:textSize="13.3sp"
+            android:textColor="@color/black"
+            android:fontFamily="@font/arialmt"
+    />
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="280dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:text="@string/commands"
             android:textSize="13.3sp"
             android:textColor="@color/black"
             android:fontFamily="@font/arialmt"
