--- a/app/src/main/res/layout/item_sensor.xml
+++ b/app/src/main/res/layout/item_sensor.xml
@@ -1,116 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+
+
+<com.daimajia.swipe.SwipeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:swipe="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/swipe"
         android:layout_width="match_parent"
-        android:layout_height="70dp" xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tool="http://schemas.android.com/tools">
+        android:layout_height="70dp"
+        swipe:drag_edge="right"
+        swipe:leftEdgeSwipeOffset="0dp"
+        swipe:rightEdgeSwipeOffset="0dp">
 
 
-    <TextView
-            android:id="@+id/tvName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tool:text="name"
-            android:textSize="13.3sp"
-            android:textColor="@color/dark1"
-            android:fontFamily="@font/arialmt"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginStart="50dp" />
+    <RelativeLayout
+            android:id="@+id/bottom_wrapper"
+            style="@android:style/Widget.Button"
+            android:layout_width="90dp"
+            android:layout_height="match_parent"
+            android:background="@color/gray1"
+            android:gravity="center_vertical"
+            android:orientation="vertical">
 
-    <TextView
-            android:id="@+id/tvPhoneNum"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="150dp"
-            android:textSize="13.3sp"
-            android:textColor="@color/dark1"
-            android:fontFamily="@font/arialmt"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:drawablePadding="7.3dp"
-            android:gravity="center"
-            tool:text="phone" />
+        <Button
+                android:id="@+id/btnDelete"
+                android:layout_width="90dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="2dp"
+                android:background="@color/transparent"
+                android:drawableTop="@drawable/btn_delete"
+                android:gravity="center_horizontal"
+                android:text="@string/delete"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="@color/my_app_color" />
+    </RelativeLayout>
 
-
-    <androidx.appcompat.widget.AppCompatImageButton
-            android:id="@+id/ibEditCamera"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="250dp"
-            android:background="@color/transparent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/cam_settings"
-
-            />
+    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_height="70dp"
+            xmlns:tool="http://schemas.android.com/tools">
 
 
-    <!--    <androidx.appcompat.widget.AppCompatImageButton-->
-    <!--            android:id="@+id/ibEditName"-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            app:srcCompat="@drawable/ic_edit"-->
-    <!--            app:layout_constraintStart_toStartOf="parent"-->
-    <!--            app:layout_constraintTop_toTopOf="parent"-->
-    <!--            app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--            app:layout_constraintEnd_toEndOf="parent"-->
-    <!--            app:layout_constraintHorizontal_bias="0.400"-->
-    <!--            android:background="@color/transparent"-->
-    <!--            android:padding="2dp"-->
-    <!--    />-->
+        <TextView
+                android:id="@+id/tvName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tool:text="name"
+                android:textSize="13.3sp"
+                android:textColor="@color/dark1"
+                android:fontFamily="@font/arialmt"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginStart="30dp" />
 
-    <!--    <TextView-->
-    <!--            android:id="@+id/tvIsLocate"-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:text="@string/not_located"-->
-    <!--            android:drawableStart="@drawable/ic_not_located"-->
-    <!--            android:textSize="13.3sp"-->
-    <!--            android:textColor="@color/red1"-->
-    <!--            android:fontFamily="@font/arialmt"-->
-    <!--            app:layout_constraintStart_toEndOf="@+id/ibEditName"-->
-    <!--            app:layout_constraintTop_toTopOf="parent"-->
-    <!--            app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--            android:layout_marginStart="25dp"-->
-    <!--            android:gravity="center"-->
-    <!--            android:drawablePadding="7.3dp"-->
-    <!--    />-->
-
-    <!--    <ToggleButton-->
-    <!--            android:id="@+id/togIsActive"-->
-    <!--            android:layout_width="55dp"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:button="@drawable/toggle_selector_active"-->
-    <!--            android:gravity="center"-->
-    <!--            android:background="@color/transparent"-->
-    <!--            android:textOff=""-->
-    <!--            android:textOn=""-->
-    <!--            app:layout_constraintStart_toStartOf="parent"-->
-    <!--            app:layout_constraintTop_toTopOf="parent"-->
-    <!--            app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--            app:layout_constraintEnd_toEndOf="parent"-->
-    <!--            app:layout_constraintHorizontal_bias="0.954"-->
-    <!--    />-->
+        <TextView
+                android:id="@+id/tvPhoneNum"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="110dp"
+                android:textSize="13.3sp"
+                android:textColor="@color/dark1"
+                android:fontFamily="@font/arialmt"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:drawablePadding="7.3dp"
+                android:gravity="center"
+                tool:text="phone" />
 
 
-    <!--&lt;!&ndash;<TextView&ndash;&gt;-->
-            <!--&lt;!&ndash;android:id="@+id/tvIsActive"&ndash;&gt;-->
-            <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
-            <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
-            <!--&lt;!&ndash;android:text="@string/status_title"&ndash;&gt;-->
-            <!--&lt;!&ndash;app:layout_constraintStart_toEndOf="@+id/tvName"&ndash;&gt;-->
-            <!--&lt;!&ndash;app:layout_constraintTop_toTopOf="parent"&ndash;&gt;-->
-            <!--&lt;!&ndash;app:layout_constraintBottom_toBottomOf="parent"&ndash;&gt;-->
-            <!--&lt;!&ndash;android:layout_marginStart="36dp"&ndash;&gt;-->
-    <!--&lt;!&ndash;/>&ndash;&gt;-->
+        <androidx.appcompat.widget.AppCompatImageButton
+                android:id="@+id/ibEditCamera"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="210dp"
+                android:background="@color/transparent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/cam_settings"
+
+                />
+
+        <androidx.appcompat.widget.AppCompatImageButton
+                android:id="@+id/ibSendCommand"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="280dp"
+                android:autoMirrored="true"
+                android:background="@color/transparent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_play_black" />
 
 
-
-
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</com.daimajia.swipe.SwipeLayout>
