--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -81,7 +81,8 @@
         <item name="android:background">@color/green1</item>
         <item name="android:paddingEnd">10dp</item>
         <item name="android:paddingStart">10dp</item>
-        <item name="android:gravity">start|center_vertical</item>
+        <item name="android:gravity">center</item>
+
 
     </style>
 
