--- a/app/src/main/res/layout/fragment_camera_extra_settings.xml
+++ b/app/src/main/res/layout/fragment_camera_extra_settings.xml
@@ -125,14 +125,13 @@
                 android:textSize="14.7sp"
                 android:digits="0123456789+-"
                 android:inputType="phone"
-                android:paddingStart="5dp"
+                android:textAlignment="center"
                 app:layout_constraintBottom_toBottomOf="@+id/tvTelNum"
                 app:layout_constraintHeight_default="percent"
                 app:layout_constraintEnd_toEndOf="@+id/etSysName"
                 app:layout_constraintStart_toStartOf="@+id/etSysName"
                 app:layout_constraintHeight_percent="0.042"
                 app:layout_constraintTop_toTopOf="@+id/tvTelNum"
-                android:paddingEnd="5dp"
                 android:textDirection="ltr"
                 tools:text="test"
                 />
