--- a/app/src/main/res/layout/custom_dialog_set_admin_command.xml
+++ b/app/src/main/res/layout/custom_dialog_set_admin_command.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="400dp"
-        android:layout_height="350dp"
+        android:layout_width="350dp"
+        android:layout_height="250dp"
         android:orientation="vertical">
 
 
@@ -10,17 +12,97 @@
             android:id="@+id/tvCommandTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
             android:fontFamily="@font/arialmt"
             android:gravity="center_horizontal"
             android:lineSpacingExtra="5.6sp"
             android:text="@string/set_admin_title"
             android:textColor="@color/medium_green"
-            android:textSize="15.3sp"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.046" />
 
+    <View
+            android:layout_width="match_parent"
+            android:layout_height="0.7dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:background="@color/gray14"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.143" />
+
+    <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/etAdminPhone"
+            android:layout_width="160.7dp"
+            android:layout_height="25dp"
+            android:background="@drawable/edit_text_border"
+            android:digits="0123456789+-"
+            android:imeOptions="actionDone"
+            android:layout_marginStart="17.3dp"
+            android:ems="12"
+            android:maxLines="1"
+            android:inputType="phone"
+            android:textSize="14.7sp"
+            android:textDirection="ltr"
+            android:textAlignment="center"
+            app:layout_constraintBottom_toBottomOf="@+id/tvAdminPhone"
+            app:layout_constraintStart_toEndOf="@+id/tvAdminPhone"
+            app:layout_constraintTop_toTopOf="@+id/tvAdminPhone" />
+
+
+    <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/etPassword"
+            android:layout_width="160.7dp"
+            android:layout_height="25dp"
+            android:background="@drawable/edit_text_border"
+            android:imeOptions="actionDone"
+            android:ems="12"
+            android:inputType="textPassword"
+            android:maxLines="1"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"
+            android:textAlignment="viewStart"
+            android:textSize="14.7sp"
+            android:textDirection="ltr"
+            app:layout_constraintBottom_toBottomOf="@+id/tvPassword"
+            app:layout_constraintStart_toStartOf="@+id/etAdminPhone"
+            app:layout_constraintTop_toTopOf="@+id/tvPassword" />
+
+
+    <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnSendCommand"
+            android:layout_width="90dp"
+            android:layout_height="31.7dp"
+            android:background="@color/green1"
+            android:fontFamily="@font/arialmt"
+            android:lineSpacingExtra="-9.9sp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:text="@string/send"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="18.7sp"
+            app:layout_constraintEnd_toEndOf="@+id/etPassword"
+            app:layout_constraintTop_toTopOf="@+id/btnCancel" />
+
+    <Button
+            android:id="@+id/btnCancel"
+            android:layout_width="90dp"
+            android:layout_height="31.7dp"
+            android:background="@color/red4"
+            android:fontFamily="@font/arialmt"
+            android:lineSpacingExtra="-9.9sp"
+            android:text="@string/cancel"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="18.7sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/tvAdminPhone"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.905" />
 
     <TextView
             android:id="@+id/tvAdminPhone"
@@ -33,87 +115,145 @@
             android:text="@string/phone_num"
             android:textColor="@color/black"
             android:textSize="14.7sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvCommandTitle" />
-
-    <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/etAdminPhone"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_marginStart="8dp"
-            android:background="@drawable/edit_text_border"
-            android:digits="0123456789+-"
-            android:imeOptions="actionDone"
-            android:maxLines="1"
-            android:textAlignment="viewStart"
-            android:textSize="14.7sp"
-            android:ems="10"
-            android:inputType="phone"
-            android:textDirection="ltr"
-            app:layout_constraintBottom_toBottomOf="@+id/tvAdminPhone"
-            app:layout_constraintStart_toEndOf="@+id/tvAdminPhone"
-            app:layout_constraintTop_toTopOf="@+id/tvAdminPhone" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.090"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.150" />
 
     <TextView
             android:id="@+id/tvPassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="48dp"
+            android:layout_marginTop="42.3dp"
             android:fontFamily="@font/arialmt"
             android:lineSpacingExtra="-9.9sp"
             android:text="@string/password_title"
             android:textColor="@color/black"
             android:textSize="14.7sp"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/tvAdminPhone"
             app:layout_constraintTop_toBottomOf="@+id/tvAdminPhone" />
 
 
-    <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/etPassword"
-            android:layout_width="0dp"
-            android:layout_height="30dp"
-            android:background="@drawable/edit_text_border"
-            android:ems="10"
-            android:imeOptions="actionDone"
-            android:inputType="textPassword"
-            android:text="0518"
-            android:textSize="14.7sp"
-            app:layout_constraintBottom_toBottomOf="@+id/tvPassword"
-            app:layout_constraintStart_toStartOf="@+id/etAdminPhone"
-            app:layout_constraintTop_toTopOf="@+id/tvPassword" />
-
-    <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btnSendCommand"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="32dp"
-            android:background="@color/green1"
-            android:fontFamily="@font/arialmt"
-            android:lineSpacingExtra="-9.9sp"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
-            android:text="@string/send"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="14.7sp"
-            app:layout_constraintStart_toEndOf="@+id/btnCancel"
-            app:layout_constraintTop_toBottomOf="@+id/etPassword" />
-
-    <Button
-            android:id="@+id/btnCancel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:background="@color/orange"
-            android:fontFamily="@font/arialmt"
-            android:lineSpacingExtra="-9.9sp"
-            android:text="@string/cancel"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="14.7sp"
-            app:layout_constraintBottom_toBottomOf="@+id/btnSendCommand"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/btnSendCommand" />
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        <!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+        <!--        xmlns:app="http://schemas.android.com/apk/res-auto"-->
+        <!--        android:layout_width="400dp"-->
+        <!--        android:layout_height="350dp"-->
+        <!--        android:orientation="vertical">-->
+
+
+        <!--&lt;!&ndash;    <androidx.appcompat.widget.AppCompatTextView&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:id="@+id/tvCommandTitle"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:layout_width="wrap_content"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:layout_height="wrap_content"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:layout_marginTop="32dp"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:fontFamily="@font/arialmt"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:gravity="center_horizontal"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:lineSpacingExtra="5.6sp"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:text="@string/set_admin_title"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:textColor="@color/medium_green"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:textSize="15.3sp"&ndash;&gt;-->
+        <!--&lt;!&ndash;            app:layout_constraintEnd_toEndOf="parent"&ndash;&gt;-->
+        <!--&lt;!&ndash;            app:layout_constraintStart_toStartOf="parent"&ndash;&gt;-->
+        <!--&lt;!&ndash;            app:layout_constraintTop_toTopOf="parent" />&ndash;&gt;-->
+
+
+        <!--&lt;!&ndash;    <TextView&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:id="@+id/tvAdminPhone"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:layout_width="wrap_content"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:layout_height="wrap_content"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:layout_marginStart="16dp"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:layout_marginTop="48dp"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:fontFamily="@font/arialmt"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:lineSpacingExtra="-9.9sp"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:text="@string/phone_num"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:textColor="@color/black"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:textSize="14.7sp"&ndash;&gt;-->
+        <!--&lt;!&ndash;            app:layout_constraintStart_toStartOf="parent"&ndash;&gt;-->
+        <!--&lt;!&ndash;            app:layout_constraintTop_toBottomOf="@+id/tvCommandTitle" />&ndash;&gt;-->
+
+        <!--&lt;!&ndash;    <androidx.appcompat.widget.AppCompatEditText&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:id="@+id/etAdminPhone"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:layout_width="wrap_content"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:layout_height="30dp"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:layout_marginStart="8dp"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:background="@drawable/edit_text_border"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:digits="0123456789+-"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:imeOptions="actionDone"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:maxLines="1"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:textAlignment="viewStart"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:textSize="14.7sp"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:ems="10"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:inputType="phone"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:textDirection="ltr"&ndash;&gt;-->
+        <!--&lt;!&ndash;            app:layout_constraintBottom_toBottomOf="@+id/tvAdminPhone"&ndash;&gt;-->
+        <!--&lt;!&ndash;            app:layout_constraintStart_toEndOf="@+id/tvAdminPhone"&ndash;&gt;-->
+        <!--&lt;!&ndash;            app:layout_constraintTop_toTopOf="@+id/tvAdminPhone" />&ndash;&gt;-->
+
+        <!--&lt;!&ndash;    <TextView&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:id="@+id/tvPassword"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:layout_width="wrap_content"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:layout_height="wrap_content"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:layout_marginStart="16dp"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:layout_marginTop="48dp"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:fontFamily="@font/arialmt"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:lineSpacingExtra="-9.9sp"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:text="@string/password_title"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:textColor="@color/black"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:textSize="14.7sp"&ndash;&gt;-->
+        <!--&lt;!&ndash;            app:layout_constraintStart_toStartOf="parent"&ndash;&gt;-->
+        <!--&lt;!&ndash;            app:layout_constraintTop_toBottomOf="@+id/tvAdminPhone" />&ndash;&gt;-->
+
+
+        <!--&lt;!&ndash;    <androidx.appcompat.widget.AppCompatEditText&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:id="@+id/etPassword"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:layout_width="0dp"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:layout_height="30dp"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:background="@drawable/edit_text_border"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:ems="10"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:imeOptions="actionDone"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:inputType="textPassword"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:text="0518"&ndash;&gt;-->
+        <!--&lt;!&ndash;            android:textSize="14.7sp"&ndash;&gt;-->
+        <!--&lt;!&ndash;            app:layout_constraintBottom_toBottomOf="@+id/tvPassword"&ndash;&gt;-->
+        <!--&lt;!&ndash;            app:layout_constraintStart_toStartOf="@+id/etAdminPhone"&ndash;&gt;-->
+        <!--&lt;!&ndash;            app:layout_constraintTop_toTopOf="@+id/tvPassword" />&ndash;&gt;-->
+
+        <!--    <androidx.appcompat.widget.AppCompatButton-->
+        <!--            android:id="@+id/btnSendCommand"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginStart="32dp"-->
+        <!--            android:layout_marginTop="32dp"-->
+        <!--            android:background="@color/green1"-->
+        <!--            android:fontFamily="@font/arialmt"-->
+        <!--            android:lineSpacingExtra="-9.9sp"-->
+        <!--            android:paddingStart="8dp"-->
+        <!--            android:paddingEnd="8dp"-->
+        <!--            android:text="@string/send"-->
+        <!--            android:textAllCaps="false"-->
+        <!--            android:textColor="@color/white"-->
+        <!--            android:textSize="14.7sp"-->
+        <!--            app:layout_constraintStart_toEndOf="@+id/btnCancel"-->
+        <!--            app:layout_constraintTop_toBottomOf="@+id/etPassword" />-->
+
+        <!--    <Button-->
+        <!--            android:id="@+id/btnCancel"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginStart="32dp"-->
+        <!--            android:background="@color/orange"-->
+        <!--            android:fontFamily="@font/arialmt"-->
+        <!--            android:lineSpacingExtra="-9.9sp"-->
+        <!--            android:text="@string/cancel"-->
+        <!--            android:textAllCaps="false"-->
+        <!--            android:textColor="@color/white"-->
+        <!--            android:textSize="14.7sp"-->
+        <!--            app:layout_constraintBottom_toBottomOf="@+id/btnSendCommand"-->
+        <!--            app:layout_constraintStart_toStartOf="parent"-->
+        <!--            app:layout_constraintTop_toTopOf="@+id/btnSendCommand" />-->
+        <!--</androidx.constraintlayout.widget.ConstraintLayout>-->
