--- a/app/src/main/res/layout/custom_dialog_set_admin_command.xml
+++ b/app/src/main/res/layout/custom_dialog_set_admin_command.xml
@@ -60,13 +60,13 @@
             android:background="@drawable/edit_text_border"
             android:imeOptions="actionDone"
             android:ems="12"
-            android:inputType="textPassword"
+            android:inputType="numberPassword"
             android:maxLines="1"
             android:paddingStart="5dp"
             android:paddingEnd="5dp"
-            android:textAlignment="viewStart"
             android:textSize="14.7sp"
             android:textDirection="ltr"
+            android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="@+id/tvPassword"
             app:layout_constraintStart_toStartOf="@+id/etAdminPhone"
             app:layout_constraintTop_toTopOf="@+id/tvPassword" />
