--- a/app/src/main/res/layout/fragment_alarm_log.xml
+++ b/app/src/main/res/layout/fragment_alarm_log.xml
@@ -83,7 +83,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
         <CheckBox
-                android:id="@+id/cbIsSelected"
+                android:id="@+id/cbSelectAll"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
