--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -93,5 +93,9 @@
         <item name="android:inputType">textEmailAddress</item>
     </style>
 
+    <style name="configOperators">
+        <item name="android:layout_marginTop">10dp</item>
+    </style>
+
 
 </resources>
